<resources>
    <string name="app_name">MorteMorteMorte</string>
    <string name="btncinema">Cinemas Próximos</string>
    <string name="txtslogan">ESTE NÃO É UM LUGAR SEGURO. \n 6 DE OUTUBRO NOS CINEMAS.</string>
    <string name="swtreveal">Aperte para revelar</string>
    <string name="txtreveal">TODOS TEM UM MOTIVO</string>
    <string name="txtinicio">INÍCIO</string>
    <string name="txtmenu">MENU</string>
    <string name="btninicio">INÍCIO</string>
    <string name="btnconheca">CONHEÇA O FILME</string>
    <string name="btnpersonagens">PERSONAGENS</string>
    <string name="btnsorteio">SORTEIO</string>
    <string name="btnjogo">JOGO</string>
    <string name="btncreditos">CRÉDITOS</string>
    <string name="txtconheca">CONHEÇA O FILME</string>
    <string name="txtnomefilme">MORTE MORTE MORTE \n (BODIES, BODIES, BODIES)</string>
    <string name="radioposter1">POSTER 1</string>
    <string name="radioposter2">POSTER 2</string>
    <string name="sinopse">Quando um grupo de ricos de vinte e poucos anos planeja uma festança em uma mansão remota, uma grande nevasca os deixa preso dentro da casa e eles começam uma jogatina de Morte Morte Morte, um jogo onde se deve descobrir quem é o assassino, mas corpos reais começam a aparecer e somente um deles pode ser o responsável.</string>
    <string name="todos1">TODOS TEM UM MOTIVO</string>
    <string name="todos2">TODOS TEM UM MOTIVO</string>
    <string name="todos3">TODOS TEM UM MOTIVO</string>
    <string name="btntrailer">ASSISTA AO TRAILER</string>
    <string name="chNavegador">Escolha</string>
    <string name="personagens">PERSONAGENS</string>
    <string name="descpersonagens">Prontos para conhecer os nossos potenciais assassinos?</string>
    <string name="sophie">SOPHIE</string>
    <string name="SophieDesc">Namora com Bee. Seus pais são extremamente ricos. Ela é a que decide jogar o jogo \"Morte Morte Morte\" e sabe muito bem as regras. Não havia sido convidada para a festa, mas vai mesmo assim com sua nova namorada.</string>
    <string name="Bee">BEE</string>
    <string name="BeeDesc">Modesta e charmosa. Fica super ansiosa para conhecer os amigos ricos de Sophie, embora tenha medo de ser humilhada por eles.</string>
    <string name="Jordan">JORDAN</string>
    <string name="JordanDesc">Ex-namorada de Sophie. Tenta sempre dominar tudo. Tem ciumes de sua ex e de sua nova namorada Bee.</string>
    <string name="Alice">ALICE</string>
    <string name="AliceDesc">Melhor amiga de Jordan. É a mais dramática, sempre deixa suas emoções tomarem controle.</string>
    <string name="Greg">GREG</string>
    <string name="GregDesc">Namorado muito mais velho de Alice. Causa estranhamento dentro do grupo, deixando os amigos de Alice sempre desconfiando dele.</string>
    <string name="David">DAVID</string>
    <string name="DavidDesc">Namora com Emma. É super rico. Seu pai é dono da mansão para onde ele convida seus amigos. Ele é brigado com Greg.</string>
    <string name="Emma">EMMA</string>
    <string name="EmmaDesc">Seus amigos acham que sempre tenta tornar a situação em algo sobre ela. É a boazinha do grupo e super inocente, ou será mesmo?</string>
    <string name="Email">Acha que sabe quem é o assassino? Mande para a gente um email com o seu palpite!</string>
    <string name="btnEmail">MANDE UM EMAIL</string>
    <string name="jogo">JOGO</string>
    <string name="escolha">VOCÊ É...?</string>
    <string name="assassino">ASSASSINO</string>
    <string name="jogador">JOGADOR</string>
    <string name="cntcorpos">CONTAGEM DE CORPOS:</string>
    <string name="btnmatei">MATEI</string>
    <string name="btnlanterna">LANTERNA DES.</string>
    <string name="btndescoberto">FUI DESCOBERTO!</string>
    <string name="tempolanterna">TEMPO LANTERNA:</string>
    <string name="btnencontrei">ENCONTREI CORPO</string>
    <string name="btnmorri">MORRI :(</string>
    <string name="morreu">MORREU</string>
    <string name="quepena">Que pena! Parece que infelizmente você foi assassinado. O jogo acabou para você.</string>
    <string name="sairjogo">SAIR</string>
    <string name="regras">REGRAS</string>
    <string name="btnconhecoregras">JÁ CONHEÇO AS REGRAS</string>
    <string name="regras1">Bem-vindos à Morte Morte Morte, um jogo de detetive-assassino cheio de mentiras e traições.</string>
    <string name="regras2">Após realizar o sorteio, você já pode iniciar o jogo. Lembre-se de selecionar se você é o assassino ou jogador.</string>
    <string name="regras3">Na brincadeira, para o assassino te matar, ele deve encostar nas suas costas. Se você morrer, deve ficar sentado no chão até alguém encontrar o seu corpo. Quando seu corpo for encontrado, uma reunião de jogadores será acionada e eles devem discutir entre si quem acham que é o assassino. Na reunião, alguém deve ser denomidado suposto assassino e expulso do jogo. Se a pessoa apontada não for o assassino, o jogo continua normalmente sem quem morreu ou foi acusado.</string>
    <string name="regrasjogadores">PARA OS JOGADORES</string>
    <string name="regras4">A tela de jogadores tem três botões: \n \n Corpo - Caso um corpo seja encontrado, você deve clicar nesse botão. Ele vai contabilizar a quantidade de corpos que já foram descobertos, te mantendo atento no jogo para saber se o assassino está próximo de ganhar. \n \n Lanterna - A lanterna serve para se proteger do assassino. Se estiver com ela ligada, o assassino não poderá te matar. Fique atento, você só pode usá-la uma única vez. \n \n Eliminado - Caso você seja assassinado ou julgado como suposto assassino, deve clicar nesse botão. Infelizmente o jogo acabará para você.</string>
    <string name="regrasasssassinos">PARA OS ASSASSINOS</string>
    <string name="regras5">A tela de assassinos também tem três botões: \n \n Matei - Caso você mate alguém, deve clicar nesse botão, ele irá marcar sua quantidade de mortes, podendo o levar a sua vitória. \n \n Lanterna - A lanterna serve para você se desfarçar entre os jogadores comuns. Lembre-se, você só pode usar ela uma vez. \n \n Fui descoberto - Caso uma das reuniões aponte para você, o seu jogo acabou. Você deve clicar o botão e a vitória será dos jogadores comuns.</string>
    <string name="regras6">O assassino pode, e deve, se misturar entre o jogadores e fingir ser um deles. Nas reuniões ele deve mentir e tentar desviar da mira de ser o acusado. \n \n Seu celular é o objeto principal do jogo, ele pode denunciar se você é o assassino. Então não deixe os outros olharem para sua tela.</string>
    <string name="iniciarjogo">INICIAR JOGO</string>
    <string name="corpos">0 corpos encontrados</string>
    <string name="perdeu">PERDEDOR</string>
    <string name="descperdeu">Parece que o assassino conseguiu pegar todo mundo e você perdeu. Boa sorte na próxima vez.</string>
    <string name="descoberto">FOI DESCOBERTO</string>
    <string name="descdescoberto">Parece que você não foi um bom assassino e foi descoberto pelos jogadores. Boa sorte na próxima.</string>
    <string name="corposa">0 mortos</string>
    <string name="cntmortes">CONTAGEM DE MORTES:</string>
    <string name="ganhou">GANHOU</string>
    <string name="descganhou">Parabéns! Você conseguiu matar todos os jogadores e foi um assassino competente.</string>
    <string name="sorteio">SORTEIO</string>
    <string name="descsorteio">No sorteio você deve digitar abaixo a quantidade de jogadores presentes e ir passando o celular para cada um deles. Eles irão clicar no botão de sortear para saber se são o assassino ou um jogador. \n \n É extremamente importante não deixar nenhum outro jogar ver a sua tela enquanto estiver sorteando.</string>
    <string name="digitejogadores">DIGITE A QUANTIDADE DE JOGADORES</string>
    <string name="btnsortear">SORTEAR</string>
    <string name="creditos">CRÉDITOS</string>
    <string name="diretora">A DIRETORA</string>
    <string name="nomdiretora">Halina Reijn</string>
    <string name="descdir">Halina Reijn é uma atriz, \n escritora e diretora de \n cinema holandesa. \n Já ganhou diversos prêmios, \n e em 2021 ganhou a oportunidade pela \n A24 de adaptar seu roteiro original de Bodies Bodies Bodies para o cinema.</string>
    <string name="insta">Instagram</string>
    <string name="imdb">IMDb</string>
    <string name="estudio">O ESTÚDIO</string>
    <string name="descestudio">A A24 é um estúdio de produções indies. Já é mundialmente conhecido pelos seus sucessos, como: X, Hereditário, Midsommar, O Farol, e o mais recente, Tudo em Todo Lugar ao Mesmo Tempo.</string>
    <string name="atores">AS ATRIZES</string>
    <string name="amandla">Amandla\nStenberg</string>
    <string name="maria">Maria\nBakalova</string>
    <string name="rachel">Rachel\nSennott</string>
    <string name="myhala">Myhala\nHerrold</string>
    <string name="chase">Chase Sui\nWonders</string>
    <string name="equipe">LOCAL DE GRAVAÇÃO</string>
    <string name="desclocal">O elenco e equipe utilizaram para as gravações uma mansão avaliada em quase 7 milhões de dólares localizada no estado de Nova York, Estados Unidos.</string>
    <string name="local">ACESSAR A LOCALIZAÇÃO</string>
    <string name="desenv">DESENVOLVEDORES</string>
    <string name="desenvdesc">Este aplicativo foi desenvolvido pelos alunos Luan Hidemi e Mateus Coripio do 2 DESENVOLVIMENTO DE SISTEMAS ETIM, da escola ETEC Prof. Basilides de Godoy, para o trabalho da professora Aline Firmino Brito.</string>
    <string name="txtagite">Agite o celular para\nligar a lanterna!</string>
    <string name="minmax">(o mínimo de jogadores são 5 e o máximo 15)</string>
    <string name="bat">BATALHA DE ASSASSINOS</string>
    <string name="batdesc">Este modo vai acontecer se mais de um assassino for sorteado. Importante ressaltar que nenhum assassino vai saber que existe outro, então ele vai achar que é o único. Os assassinos irão batalhar entre si, se fingindo de jogadores, e podem matar uns aos outros. O assassino que restar ganha.</string>
    <string name="login">LOGIN</string>
    <string name="emaill">EMAIL</string>
    <string name="senha">SENHA</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="cadastro">Ainda não tem cadastro? Cadastre-se.</string>
    <string name="palpite">PALPITE</string>
    <string name="palpitedesc">Dê o seu palpite sobre quem é o assassino do filme.</string>
    <string name="salvar">SALVAR</string>
    <string name="pdesc2">Após assistir ao filme, clique no botão abaixo para revelar qual foi o seu palpite e veja se acertou ou errou.</string>
    <string name="revelar">REVELAR</string>
    <string name="cadastre">CADASTRE-SE</string>
    <string name="nome">NOME</string>
    <string name="jacad">Já tem cadastro? Faça login.</string>
    <string name="usuario">USUÁRIO</string>
    <string name="confsenha">CONFIRMAR SENHA</string>
    <string name="deslogar">DESLOGAR</string>
    <string name="deslogdesc">Para deslogar, confirme seu usuário e senha.</string>
    <string name="save">SALVAR</string>
    <string name="palpitej">PALPITE DO JOGO</string>
    <string name="ler">LER</string>
    <string name="palpitejdesc">Escreva aqui quem você acha que é o assasino da rodada e clique no botão da esquerda para salvar. Após você morrer, ou o jogo acabar, clique no botão da direita para ver se acertou.</string>
    <string name="critica">CRÍTICA</string>
    <string name="cridesc">Deixe aqui salvo a sua crítica após assistir o filme. O que achou dele? Qual sua nota? Não gostou, por quê?</string>
    <string name="lecritica">Leitura da crítica:</string>
</resources>