<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20201e"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btncritica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/critica"
        android:textColor="#A432EA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnpalpite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/palpite"
        android:textColor="#2ACFCA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btncritica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/detalhemenu" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/txtmenu"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnvoltarinicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnvoltarinicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btninicio"
        android:textColor="#2ACFCA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnvoltarconheca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnvoltarconheca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btnconheca"
        android:textColor="#A432EA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnvoltarpersonagens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnvoltarpersonagens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btnpersonagens"
        android:textColor="#58B138"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnsorteio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnsorteio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btnsorteio"
        android:textColor="#2ACFCA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnjogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btncreditos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btncreditos"
        android:textColor="#58B138"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnpalpite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnjogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btnjogo"
        android:textColor="#A432EA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btncreditos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>