<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20201e"
    tools:context=".JogadorActivity">

    <TextView
        android:id="@+id/txtTempoLanterna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmorri" />

    <Button
        android:id="@+id/btnecontrei"
        android:layout_width="284dp"
        android:layout_height="68dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#0EAEBC"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btnencontrei"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorpo" />

    <Button
        android:id="@+id/btnlanternajogador"
        android:layout_width="284dp"
        android:layout_height="68dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#0EAEBC"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btnlanterna"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnecontrei" />

    <Button
        android:id="@+id/btnmorri"
        android:layout_width="284dp"
        android:layout_height="68dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#0EAEBC"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btnmorri"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlanternajogador" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/cntcorpos"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPersonagens6" />

    <TextView
        android:id="@+id/txtCorpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/corpos"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/btnPersonagens6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/jogador"
        android:textColor="#0EAEBC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>